app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icu-app
  labels: 
    app: app-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      containers:
      - name: app
        image: israelfrank/learn_docker:icuiPipline-48
        command: ["node" , "server"]
        ports:
        - name: icu-ports
          containerPort: 3000
