elastic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  containers:
  - name: mongo
    image: docker.elastic.co/elasticsearch/elasticsearch:6.8.4
