ftp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ftp
  labels:
    app: ftp
spec:
  containers:
  - name: ftp
    image:  stilliard/pure-ftpd
    ports:
    - name: ftp-ports
      containerPort: 21
    - name: ftp-ports-2
      containerPort: 30009
