app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  ports:
  - port: 3001
    targetPort: 3000
    protocol: TCP
  selector:
    app: app-service
  type: LoadBalancer
