ftp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftp
spec:
  ports:
  - name: ftp-port
    port: 21
    targetPort: 21
  - name: ftp-port-2
    port: 30000
    targetPort: 30000
    protocol: TCP
  selector:
    app: ftp
  type: NodePort
