app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress 
  namespace: default
spec:
  rules: 
  - http:
      paths:
      - backend:
          serviceName: app-service
          servicePort: 3001
        path: /
